--- a/src/main/webapp/resources/css/styles.css
+++ b/src/main/webapp/resources/css/styles.css
@@ -547,6 +547,10 @@ header {
     height: 150px;
 }
 
+.detail p {
+    height: 40px;
+}
+
 .listProduct .item button {
     background-color: #353432;
     color: #eee;
